<resources>
    <string name="app_name">JuneAndroidBatch</string>
    <string name="temp"> this is tempe class , we required only on temp basisw , no need to call</string>

    <string name="project">Projects</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="your_health">Your health</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="calaculate_bmi">Calaculate BMI</string>
    <string name="height_in_inch">Height in inch</string>
    <string name="height_in_ft">Height in ft</string>
    <string name="enter_your_weight_in_kg">Enter your weight in kg</string>
    <string name="you_are_overweight">You are overweight</string>
    <string name="you_are_underweight">You are underWeight</string>
    <string name="you_are_healthy">You are healthy</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragments">Fragments</string>
    <string name="viewpager">ViewPager2</string>
    <string name="open_webview">open Webview</string>
    <string name="send_message">send message</string>
</resources>