<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:text="@string/project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:layout_margin="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/lifecycle"
            android:text="@string/lifecycle"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/simple_calculator_btn"
            android:text="@string/simple_calculator" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/bmi_calculator_btn"
            android:text="@string/bmi_calculator"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe"
            android:layout_marginTop="10dp"
            android:id="@+id/tictactoe_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragments"
            android:layout_marginTop="10dp"
            android:id="@+id/frag_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ViewPager"
            android:layout_marginTop="10dp"
            android:id="@+id/viewpager_btn"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_rv"
            android:visibility="gone"
            tools:listitem="@layout/name_item"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

